k8minvu/catastro-web/deploy.yaml
apiVersion: apps/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: catastro-web
  labels:
    app: catastro-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catastro-web
  template:
    metadata:
      labels:
        app: catastro-web
    spec:
      containers:
      - name: catastro-web
        image: minvu.azurecr.io/catastro-web:79721df904a00bbf13086c1d27d9ff5edb587aee
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
      imagePullSecrets:
        - name: azureregistry
