k8minvu/catastro-web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catastro-web-svc
  labels:
    app: catastro-web
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: catastro-web
